--- a/Webpage-style.html
+++ b/Webpage-style.html
@@ -42,8 +42,8 @@
 
 <section>
 	<h2>More About Me</h2>
-	<details>
-	<summary open>My childhood</summary>
+	<details open>
+	<summary>My childhood</summary>
 
 	I grew up in a town called Toluca, in State of Mexico.
 	I dont't remember a lot of my childhood but I know that I watched The lion king over and over again until I 
